# librtas

./: .gitignore  Changelog  Makefile  Makefile.am  README  configure.ac  librtas.pc.in  librtas.spec  librtas.spec.in  rules.mk
.github/workflows/: build.yml  cppcheck.yml  main.yml
data/abixml/librtas/: powerpc-linux-gnu.xml  powerpc64le-linux-gnu.xml
data/abixml/librtasevent/: powerpc-linux-gnu.xml  powerpc64le-linux-gnu.xml
doc/: doxygen.rtas  doxygen.rtasevent
libofdt_src/: Makefile  README  common.h  drc.c  dtree.c  libofdt.h  libofdt.so.1.3.6
librtas_src/: Makefile  common.c  common.h  internal.h  librtas.h  librtas.so.1.3.6  lparctl.h  ofdt.c  papr-miscdev.h  papr-sysparm.h  papr-vpd.h  procfs.h  procfs_calls.c  syscall.h  syscall_calls.c  syscall_rmo.c  sysparm.c  vpd.c
librtasevent_src/: Makefile  get_rtas_event.c  librtasevent.h  librtasevent.so.1.3.6  librtasevent_v4.h  librtasevent_v6.h  print_rtas_event.c  rtas_cpu.c  rtas_dump.c  rtas_epow.c  rtas_event.h  rtas_hotplug.c  rtas_io.c  rtas_lri.c  rtas_mem.c  rtas_post.c  rtas_sp.c  rtas_src_codes.c  rtas_srcfru.c  rtas_v6_misc.c  rtas_vend.c
m4/: lib-pathname.m4
resources/: generate-compat-dump
resources/compat-dumps/: powerpc-linux-gnu.dump  powerpc64-linux-gnu.dump  powerpc64le-linux-gnu.dump  x86_64-linux-gnu.dump
test/: compat-check  visibility
test/data/: librtas.so-expected-exports  librtasevent.so-expected-exports
tests/: dlopen_librtas.c  link_librtas.c  rtas_set_debug.c
tools/: build-with  ci-build  generate-abi-defs
